Chat: Fix overlap

--- a/boox/src/components/Chat/Chat.module.css
+++ b/boox/src/components/Chat/Chat.module.css
@@ -11,6 +11,7 @@ button.chat {
   padding-top: 0;
   padding-bottom: 0;
   font-weight: bold;
+  z-index: 1;
 }
 
 button.open {
